# cookieclicker

./: Cargo.toml
agent/: Cargo.toml
agent/src/: main.rs
automation/: Cargo.toml
automation/src/: client.rs  database.rs  fantoccini.rs  lib.rs  locator.rs  main.rs  save.rs
cookieclicker-save/: Cargo.toml
cookieclicker-save-derive/: Cargo.toml
cookieclicker-save-derive/src/: lib.rs
cookieclicker-save/examples/: decode.rs  encode.rs
cookieclicker-save/src/: escape.rs  format.rs  game_buffs.rs
cookieclicker-save/src/samples/: 02.txt
dump-influxdb/: Cargo.toml
dump-influxdb/src/: main.rs
firefox-exporter/: Cargo.toml
firefox-exporter/examples/: export.rs
firefox-exporter/src/: lib.rs
sandbox/: Dockerfile  docker-bake.hcl  docker-compose.yaml  kind.yaml  sandbox.yaml  setup-kind.sh
save/: Cargo.toml
save-derive/: Cargo.toml
save-derive/src/: decode.rs  encode.rs  lib.rs
save/examples/: decode.rs
save/src/: achievements.rs  decode.rs  error.rs  format.rs  garden.rs  lib.rs  tests.rs  upgrades.rs
save/src/decode/: primitives.rs
save/src/format/: base64.rs  none_as.rs  none_as_empty.rs  none_as_negative.rs  primitive.rs  standard.rs  timestamp.rs
save/src/samples/: 00.txt  01.txt
