[workspace]
members = ["firefox-exporter"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.93"
base64 = "0.22.1"
chrono = { version =  "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5.0.1"
futures = "0.3.31"
humantime = "2.1.0"
rust-ini = "0.21.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
snap = "1.1.1"
sqlx = { version = "0.8.2", features = ["runtime-tokio"] }
thiserror = "2.0.3"
tokio = "1.41.1"
tracing = "0.1.40"
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
