[workspace]
members = [
  "automation",
  "cookieclicker-save",
  "cookieclicker-save-derive",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.93"
backoff = "0.4.0"
base64 = "0.22.1"
chrono = { version =  "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = "3.4"
fantoccini = { version = "0.21.2", features = ["rustls-tls"] }
futures = "0.3.31"
itertools = "0.13.0"
proc-macro2 = "1.0.92"
quote = "1.0.37"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["runtime-tokio"] }
strum = { version = "0.26.3", features = ["derive"] }
syn = "2.0.89"
thiserror = "2.0.3"
tokio = "1.41.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-test = "0.2.5"
urlencoding = "2.1.3"
