[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
automation.path = "../automation"
clap.workspace = true
chrono.workspace = true
futures.workspace = true
humantime.workspace = true
save.path = "../save"
sqlx = { workspace = true, features = ["chrono", "sqlite"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing-subscriber.workspace = true
