[package]
name = "cookieclicker-save"
version = "0.1.0"
edition = "2021"

[dependencies]
base64.workspace = true
chrono.workspace = true
cookieclicker-save-derive.path = "../cookieclicker-save-derive"
itertools.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
urlencoding.workspace = true

[dev-dependencies]
anyhow.workspace = true
rand.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
tracing-test.workspace = true
