[package]
name = "save"
version = "0.1.0"
edition = "2021"

[dependencies]
base64.workspace = true
itertools.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
urlencoding.workspace = true

[dev-dependencies]
anyhow.workspace = true
tracing-subscriber.workspace = true
