[package]
name = "save"
version = "0.1.0"
edition = "2021"

[dependencies]
base64.workspace = true
chrono.workspace = true
itertools.workspace = true
save-derive.path = "../save-derive"
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
urlencoding.workspace = true

[dev-dependencies]
anyhow.workspace = true
rand.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
tracing-test.workspace = true
